# shoppable-video

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  cloudbuild.yaml  pyproject.toml
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
conductor/tracks/ads_hierarchy_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/backend_tests_20260226/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/variant_grouping_20260226/: index.md  metadata.json  plan.md  spec.md
src/pipeline/product_embeddings/generate_embedding/: generate_embedding_lib.py  main.py  pyproject.toml  requirements.txt
src/pipeline/product_embeddings/generate_embedding/tests/: test_generate_embedding_lib.py
src/pipeline/product_embeddings/queue_products/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/pipeline/product_embeddings/queue_products/queries/: get_new_products.sql
src/pipeline/product_embeddings/queue_products/tests/: test_queue_products_lib.py
src/pipeline/shared/: common.py  embeddings.py  logging_config.py  pyproject.toml  requirements.txt
src/pipeline/shared/tests/: test_common.py  test_embeddings.py
src/pipeline/video_inventory_analysis/analyze_video/: analyze_video_lib.py  main.py  pyproject.toml  requirements.txt
src/pipeline/video_inventory_analysis/analyze_video/config/: video_analysis_prompt.txt
src/pipeline/video_inventory_analysis/analyze_video/tests/: test_analyze_video_lib.py
src/pipeline/video_inventory_analysis/queue_videos/: Dockerfile  main.py  pyproject.toml  queue_videos_lib.py  requirements.in  requirements.txt
src/pipeline/video_inventory_analysis/queue_videos/tests/: test_queue_videos_lib.py
src/product_embeddings/build_vector_search_index/: main.py
src/product_embeddings/generate_embedding/: generate_embedding_lib.py  main.py  requirements.txt
src/product_embeddings/import_index/: Dockerfile  cloudbuild.yaml  main.py  requirements.in  requirements.txt
src/product_embeddings/queue_products/: Dockerfile  main.py  queue_products_lib.py  requirements.txt
src/product_embeddings/queue_products/queries/: get_new_products.sql
src/product_embeddings/shared/: common.py
src/shared/: common.py  embeddings.py  requirements.in
src/video_inventory_analysis/analyze_video/: analyze_video_lib.py  main.py
src/video_inventory_analysis/queue_videos/: .dockerignore  Dockerfile  main.py  queue_videos_lib.py
src/webapp/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
src/webapp/backend/app/: auth.py  main.py  models.py
src/webapp/backend/app/api/: dependencies.py
src/webapp/backend/app/api/routes/: ad_group_insertions.py  auth.py  candidates.py  reports.py  videos.py
src/webapp/backend/app/core/: config.py  log_setup.py  security.py
src/webapp/backend/app/models/: ad_group_insertion.py  candidate.py  product.py  video.py
src/webapp/backend/app/routers/: data_routes.py
src/webapp/backend/app/services/: bigquery_service.py  firestore_service.py  google_ads.py
src/webapp/backend/app/services/queries/: get_ad_group_insertion_status.sql  get_ad_group_insertion_status_by_video.sql  get_ad_groups_for_video.sql  get_all_ad_group_insertion_statuses.sql  get_campaigns_for_video.sql  get_video_analysis.sql  get_video_analysis_summary.sql
src/webapp/backend/cloud_run/: ads_service.py  bigquery_service.py  constants.py  main.py
src/webapp/backend/tests/: conftest.py
src/webapp/backend/tests/test_api/: test_ad_group_insertions.py  test_candidates.py  test_dependencies.py  test_reports.py  test_videos.py
src/webapp/backend/tests/test_models/: __init__.py  test_ad_group_insertion.py  test_candidate.py  test_product.py  test_video.py
src/webapp/backend/tests/test_services/: test_bigquery_service.py  test_firestore_service.py  test_google_ads.py
src/webapp/cloud_run/: Dockerfile  pyproject.toml
src/webapp/data_sync/: Dockerfile  main.py  pyproject.toml
src/webapp/data_sync/app/services/: sync_service.py
src/webapp/data_sync/tests/: test_sync_service.py
src/webapp/frontend/: .eslintrc.js  .eslintrc.json  README.md  angular.json  package-lock.json  package.json
src/webapp/frontend/src/: index.html  main.ts  styles.scss
src/webapp/push_to_ads/: Dockerfile  ads_service.py  main.py  models.py  processor.py  pyproject.toml  utils.py
src/webapp/push_to_ads/tests/: test_ads_service.py  test_processor.py
src/webapp/shared/: logging_config.py  pyproject.toml
src/webapp/shared/tests/: test_logging_config.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/apis/: main.tf  output.tf  variables.tf
terraform/modules/bigquery/: main.tf  output.tf  variables.tf
terraform/modules/bigquery/templates/: get_new_products.tftpl
terraform/modules/functions/: main.tf  output.tf  variables.tf
terraform/modules/jobs/: main.tf  outputs.tf  variables.tf
terraform/modules/pipeline/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/pipeline/bigquery/: main.tf  output.tf  outputs.tf  variables.tf
terraform/modules/pipeline/functions/: main.tf  output.tf  outputs.tf  variables.tf
terraform/modules/pipeline/jobs/: main.tf  (+2 more)
terraform/modules/project_setup/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/scheduler/: main.tf  variables.tf
terraform/modules/secrets/: main.tf  output.tf  variables.tf
terraform/modules/storage/: main.tf  output.tf  variables.tf
terraform/modules/tasks/: main.tf  output.tf  variables.tf
terraform/modules/vertex_ai/: main.tf  outputs.tf  variables.tf
terraform/modules/webapp/: README.md  jobs.tf  main.tf  outputs.tf  variables.tf
tests/product_embeddings/generate_embedding/: test_generate_embedding_lib.py
tests/product_embeddings/queue_products/: test_queue_products_lib.py
tests/shared/: test_common.py  test_embeddings.py
tests/video_inventory_analysis/analyze_video/: test_analyze_video_lib.py
tests/video_inventory_analysis/queue_videos/: test_queue_videos_lib.py
(+115 files in other folders)
