[project]
name = "webapp_backend"
version = "0.1.0"
description = "Shoppable Video Webapp Backend"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.0",
    "fastapi==0.128.0",
    "google-ads==28.4.1",
    "google-auth>=2.42.0",
    "google-auth-oauthlib==1.2.4",
    "google-cloud-bigquery>=3.29.0",
    "gunicorn==23.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "pyyaml==6.0.3",
    "requests>=2.32.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "types-requests==2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["app"]
