[project]
name = "data_sync"
version = "0.1.0"
description = "Unified BigQuery to Firestore Data Sync"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-logging>=3.11.4",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-firestore>=2.19.0",
    "shared",
    "webapp-shared",
]

[tool.uv.sources]
shared = { workspace = true }
webapp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
