[project]
name = "webapp_push_to_google_ads"
version = "0.1.0"
description = "Shoppable Video Push to Google Ads Job"
requires-python = ">=3.13"
dependencies = [
    "google-ads==28.4.1",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-logging>=3.14.0",
    "pydantic>=2.12.4",
    "python-dotenv==1.2.2",
    "webapp-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
webapp-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["."]
