[project]
name = "webapp-shared"
version = "0.1.0"
description = "Centralized logging and configuration utilities"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-logging>=3.11.4",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
