[project]
name = "generate_embedding"
version = "0.1.0"
description = "Generate product embeddings"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.9.2",
    "google-genai>=1.50.1",
    "google-cloud-logging>=3.11.4",
    "google-cloud-bigquery>=3.29.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
