[project]
name = "queue_products"
version = "0.1.0"
description = "Queue products for embedding generation"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-logging>=3.11.4",
    "google-cloud-tasks>=2.14.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
