[project]
name = "queue_videos"
version = "0.1.0"
description = "Queue videos for analysis"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.150.0",
    "google-auth>=2.42.0",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-logging>=3.11.4",
    "google-cloud-storage>=2.19.0",
    "google-cloud-tasks>=2.14.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
